# service/api/api-auth.go
@@ -4,21 +4,14 @@ import (
 	"database/sql"
 	"encoding/json"
 	"errors"
-	"github.com/ciottolomaggico/wasatext/service/database"
-	"github.com/ciottolomaggico/wasatext/service/utils/authentication"
 	"github.com/ciottolomaggico/wasatext/service/utils/validators"
-	"github.com/google/uuid"
 	"github.com/julienschmidt/httprouter"
 	"net/http"
 )
 
 func (rt *_router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
-	w.Header().Set("content-type", "application/json")
-
 	// Parse the request body to get the username
-	var requestBody struct {
-		Username string `json:"username"`
-	}
+	requestBody := UsernameRequestBody{}
 	if err := json.NewDecoder(r.Body).Decode(&requestBody); err != nil {
 		w.WriteHeader(http.StatusBadRequest)
 		return
@@ -30,29 +23,17 @@ func (rt *_router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter
 	}
 
 	// Parse the user from the database, if it not exist then create a new user with the provided username
-	user, err := rt.db.GetUser(requestBody.Username)
+	user, err := rt.db.GetUserByUsername(requestBody.Username)
 	if errors.Is(err, sql.ErrNoRows) {
 		// create the user
-		user, err = database.NewUser(requestBody.Username, nil)
+		user, err = rt.db.NewUser(requestBody.Username)
 		if err != nil {
 			w.WriteHeader(http.StatusInternalServerError)
 		}
-		user.Save(rt.db)
+	} else if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
 	}
 
 	// Return the user data to the client
 	json.NewEncoder(w).Encode(user)
-}
-
-func GetAuthenticatedUser(r *http.Request, db database.AppDatabase) (*database.User, error) {
-	token := authentication.GetAuthToken(r)
-	if _, err := uuid.Parse(token); err != nil {
-		return nil, errors.New("Invalid token or User not authenticated")
-	}
-
-	user, err := db.GetUserByUUID(token)
-	if err != nil {
-		return nil, errors.New("The user does not exist")
-	}
-	return user, err
 }
