# service/database/model-user.go
@@ -4,126 +4,192 @@ import (
 	"database/sql"
 	"errors"
 	"fmt"
+	"github.com/ciottolomaggico/wasatext/service/utils/authentication"
 	"github.com/ciottolomaggico/wasatext/service/utils/validators"
 	"github.com/google/uuid"
+	"net/http"
 )
+
+const defaultUserImage = "default_user_image"
 
 type User struct {
 	Uuid         string `json:"uuid"`
 	Username     string `json:"username"`
-	ProfileImage *Image `json:"image"`
+	ProfileImage Image  `json:"photo"`
+
+	db *appdbimpl
 }
 
-func NewUser(username string, photo *Image) (*User, error) {
-	rawUUID, err := uuid.NewRandom()
-	if err != nil {
-		return nil, fmt.Errorf("failed to generate uuid: %w", err)
-	}
-	if ok, err := validators.UsernameIsValid(username); !ok {
-		return nil, err
-	}
-	if photo == nil {
-		photo = &Image{
-			"default_user_image.jpg",
-			1470000,
-			sql.NullString{"", false},
-			8000,
-			8000,
-		}
-	}
-
-	user := &User{rawUUID.String(), username, photo}
-	return user, nil
+type UpdateUserParams struct {
+	Username     string
+	ProfileImage Image
 }
 
-func (u *User) Exists(appDB AppDatabase) (bool, error) {
-	var tmpUUID string
-	db := appDB.(*appdbimpl).c
-	err := db.QueryRow(getUserUUIDQuery, u.Uuid).Scan(&tmpUUID)
-	if errors.Is(err, sql.ErrNoRows) {
-		return false, nil
-	} else if err != nil {
-		return false, fmt.Errorf("failed to check if user exists: %w", err)
-	}
-	return true, nil
-
-}
-
-func (u *User) Save(appDB AppDatabase) error {
-	db := appDB.(*appdbimpl).c
-	userExists, err := u.Exists(appDB)
-	if err != nil {
+func (up UpdateUserParams) Validate() error {
+	if ok, err := validators.UsernameIsValid(up.Username); !ok {
 		return err
 	}
-	// Create a new user row
-	if !userExists {
-		if _, err := db.Exec(userCreationQuery, u.Uuid, u.Username, u.ProfileImage.Filename); err != nil {
-			return fmt.Errorf("failed to create the user: %w", err)
-		}
-
-		return nil
-	}
-
-	// Update the existing user row with new values
-	if _, err := db.Exec(userUpdateQuery, u.Username, u.ProfileImage.Filename, u.Uuid); err != nil {
+	if err := up.ProfileImage.Validate(); err != nil {
 		return err
 	}
 	return nil
 }
 
-func (u *User) Delete(db AppDatabase) error {
-	return errors.New("not implemented")
+func (u User) Validate() error {
+	if ok, err := validators.UsernameIsValid(u.Username); !ok {
+		return err
+	}
+	if err := u.ProfileImage.Validate(); err != nil {
+		return err
+	}
+	return nil
 }
 
-func (db *appdbimpl) GetUser(username string) (*User, error) {
+func (db *appdbimpl) NewUser(username string) (*User, error) {
+	// For each provided arguments run the corresponding validator
 	if ok, err := validators.UsernameIsValid(username); !ok {
-		return nil, fmt.Errorf("invalid username: %w", err)
+		return nil, err
 	}
-	user := User{}
-	user.ProfileImage = &Image{}
-	image := user.ProfileImage
 
-	if err := db.c.QueryRow(getUserQuery, username).Scan(
+	// If all the arguments are valid then set the "private" object fields (e.g. primary key)
+	rawUUID, err := uuid.NewRandom()
+	if err != nil {
+		return nil, fmt.Errorf("failed to generate a new uuid: %w", err)
+	}
+
+	// Create the user in the database
+	if _, err := db.c.Exec(
+		qCreateUser, rawUUID.String(), username, defaultUserImage,
+	); err != nil {
+		return nil, fmt.Errorf("failed to save the user in the db: %w", err)
+	}
+
+	user := User{rawUUID.String(), username, Image{defaultUserImage, ".jpg", db}, db}
+	return &user, nil
+}
+
+func (u *User) Update(params UpdateUserParams) error {
+	if err := u.Validate(); err != nil {
+		return err
+	}
+	if err := params.Validate(); err != nil {
+		return err
+	}
+
+	if _, err := u.db.c.Exec(
+		qUpdateUser,
+		params.Username,
+		params.ProfileImage.Uuid,
+		u.Uuid,
+	); err != nil {
+		return err
+	}
+
+	u.Username, u.ProfileImage = params.Username, params.ProfileImage
+	return nil
+}
+
+func (u *User) GetConversations(pageSize int, pageNumber int) ([]DefaultConversation, error) {
+	if err := u.Validate(); err != nil {
+		return nil, err
+	}
+	rows, err := u.db.c.Query(
+		getUserConversationsPaginated,
+		u.Uuid, pageSize, pageNumber*pageSize,
+	)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+
+	chats := make([]DefaultConversation, 0, pageSize)
+	for rows.Next() {
+		var chat Conversation
+		var groupName, groupPhoto, user1Id, user2Id sql.NullString
+		var convId uint64
+
+		if err := rows.Scan(
+			&convId,
+			&user1Id,
+			&user2Id,
+			&groupName,
+			&groupPhoto,
+		); err != nil {
+			return nil, err
+		}
+
+		if groupName.Valid {
+			photo, _ := u.db.GetImage(groupPhoto.String)
+			chat = GroupConversation{convId, groupName.String, *photo, *u, u.db}
+		} else {
+			user1, _ := u.db.GetUserByUUID(user1Id.String)
+			user2, _ := u.db.GetUserByUUID(user2Id.String)
+			switch u.Uuid {
+			case user1.Uuid:
+				chat = ChatConversation{convId, *user1, *user2, *u, u.db}
+			case user2.Uuid:
+				chat = ChatConversation{convId, *user2, *user1, *u, u.db}
+			}
+		}
+
+		chats = append(chats, DefaultConversation{chat})
+	}
+
+	if err := rows.Close(); err != nil {
+		return nil, err
+	}
+	if err := rows.Err(); errors.Is(err, sql.ErrNoRows) {
+		return chats, nil
+	} else if err != nil {
+		return nil, err
+	}
+
+	return chats, nil
+}
+
+func (db *appdbimpl) getUser(identifier string, query string) (*User, error) {
+	user := User{}
+	user.ProfileImage = Image{}
+	image := &user.ProfileImage
+	if err := db.c.QueryRow(query, identifier).Scan(
 		&user.Uuid,
 		&user.Username,
-		&image.Filename,
-		&image.Size,
-		&image.Owner,
-		&image.Width,
-		&image.Height,
+		&image.Uuid,
+		&image.Extension,
 	); err != nil {
 		return nil, fmt.Errorf("failed to query user: %w", err)
 	}
 
+	user.db = db
 	return &user, nil
+}
+
+func (db *appdbimpl) GetUserByUsername(username string) (*User, error) {
+	if ok, err := validators.UsernameIsValid(username); !ok {
+		return nil, err
+	}
+	return db.getUser(username, qGetUserByUsername)
 }
 
 func (db *appdbimpl) GetUserByUUID(UUID string) (*User, error) {
 	if _, err := uuid.Parse(UUID); err != nil {
 		return nil, fmt.Errorf("invalid uuid: %w", err)
 	}
-	user := User{}
-	user.ProfileImage = &Image{}
-	image := user.ProfileImage
+	return db.getUser(UUID, qGetUserByUUID)
+}
 
-	if err := db.c.QueryRow(getUserByUUIDQuery, UUID).Scan(
-		&user.Uuid,
-		&user.Username,
-		&image.Filename,
-		&image.Size,
-		&image.Owner,
-		&image.Width,
-		&image.Height,
-	); err != nil {
-		return nil, fmt.Errorf("failed to query user: %w", err)
+func (db *appdbimpl) GetAuthenticatedUser(r *http.Request) (*User, error) {
+	token := authentication.GetAuthToken(r)
+	if _, err := uuid.Parse(token); err != nil {
+		return nil, errors.New("Invalid token or User not authenticated")
 	}
 
-	return &user, nil
+	return db.GetUserByUUID(token)
 }
 
 func (db *appdbimpl) GetUsers(pageSize int, pageNumber int) ([]User, error) {
 	rows, err := db.c.Query(
-		getUsersPaginatedQuery,
+		qGetUsersPaginated,
 		pageSize, pageNumber*pageSize,
 	)
 	if err != nil {
@@ -134,23 +200,25 @@ func (db *appdbimpl) GetUsers(pageSize int, pageNumber int) ([]User, error) {
 	users := make([]User, 0, pageSize)
 	for rows.Next() {
 		user := User{}
-		user.ProfileImage = &Image{}
-		image := user.ProfileImage
+		user.ProfileImage = Image{}
+		image := &user.ProfileImage
 
 		if err := rows.Scan(
 			&user.Uuid,
 			&user.Username,
-			&image.Filename,
-			&image.Size,
-			&image.Owner,
-			&image.Width,
-			&image.Height,
+			&image.Uuid,
+			&image.Extension,
 		); err != nil {
 			return nil, err
 		}
+
+		user.db = db
 		users = append(users, user)
 	}
 
+	if err := rows.Close(); err != nil {
+		return nil, err
+	}
 	if err := rows.Err(); err != nil {
 		return nil, err
 	}
@@ -160,9 +228,54 @@ func (db *appdbimpl) GetUsers(pageSize int, pageNumber int) ([]User, error) {
 func (db *appdbimpl) UsersCount() (int, error) {
 	var count int
 	err := db.c.QueryRow(
-		getUsersCountQuery,
+		qGetUsersCount,
 	).Scan(
 		&count,
 	)
 	return count, err
+}
+
+func (u *User) GetConversation(id int64) (Conversation, error) {
+	return nil, nil
+	//// TODO: handling errors
+	//if id < 0 {
+	//	return nil, errors.New("invalid id")
+	//}
+	//
+	//var chat Conversation
+	//var groupName, groupPhoto, user1Id, user2Id sql.NullString
+	//var convId int64
+	//
+	//if err := u.db.c.QueryRow(qGetConversation, id, u.Uuid).Scan(
+	//	&convId,
+	//	&user1Id,
+	//	&user2Id,
+	//	&groupName,
+	//	&groupPhoto,
+	//); errors.Is(err, sql.ErrNoRows) {
+	//	return nil, errors.New("conversation not found")
+	//} else if err != nil {
+	//	return nil, err
+	//}
+	//
+	//if groupName.Valid {
+	//	photo, _ := u.db.GetImage(groupPhoto.String)
+	//	chat = GroupConversation{convId, groupName.String, *photo, u.db}
+	//} else {
+	//	user1, _ := u.db.GetUserByUUID(user1Id.String)
+	//	user2, _ := u.db.GetUserByUUID(user2Id.String)
+	//	switch u.Uuid {
+	//	case user1.Uuid:
+	//		chat = ChatConversation{convId, *user1, *user2, u.db}
+	//	case user2.Uuid:
+	//		chat = ChatConversation{convId, *user2, *user1, u.db}
+	//	}
+	//}
+	//
+	//return chat, nil
+}
+
+func (u *User) SetDelivered() error {
+	// TODO: implement
+	return nil
 }
